--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-concat-css": "^3.1.0"
+  }
 }
